# cerebro

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  docker-compose.yml
client/: Dockerfile  setup.py
client/cerebro_node/: __init__.py  cli.py  node.py  protocol.py  pty_session.py  tui.py
deploy/: Caddyfile.example
server/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
server/cerebro_server/: audit.py  auth.py  cli.py  funny_names.py  hub.py  main.py  models.py  orchestrator_manager.py  passkeys.py  persistence.py  plugins_loader.py  protocol.py  registry.py
server/cerebro_server/orchestrator/: CLAUDE.md
server/cerebro_server/plugins/: bash.json  claude.json  htop.json
server/cerebro_server/routers/: agents.py  folders.py  nodes.py  passkey.py  plugins.py  ws.py
server/cerebro_server/static/: app.js  index.html  style.css
server/ctl/: cerebro_ctl.py  setup.py
