[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebro-server"
version = "0.3.0"
description = "Cerebro master node — orchestrates distributed Claude Code agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "redis[asyncio]==5.0.4",
    "websockets==12.0",
    "pydantic==2.7.0",
    "python-dotenv==1.0.1",
    "httpx>=0.27.0",
    "typer>=0.12.0",
]

[project.scripts]
cerebro-server = "cerebro_server.cli:main"

[tool.setuptools.packages.find]
include = ["cerebro_server*"]

[tool.setuptools.package-data]
cerebro_server = ["static/**/*", "orchestrator/**/*", "plugins/**/*"]
